[package]
name = "GameboyEmulator"
version = "0.1.0"
authors = ["bryce"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel-canvas = "0.2.1"
pixels = "0.0.3"
winit = "0.22.0"
ticker = "0.1.1"
winit_input_helper = "0.6.0"
